...
    ModalBottomSheet(onDismissRequest = { hideSheet() }) {
      Column(
          modifier = Modifier.fillMaxWidth().padding(bottom = 60.dp),
          horizontalAlignment = Alignment.CenterHorizontally) {
            Text(
                modifier =
                    Modifier.padding(start = 16.dp, end = 16.dp).testTag("photoSelectionSheet"),
                text = "Choose option",
                style = MaterialTheme.typography.titleLarge,
                textAlign = TextAlign.Center)
            ListItem(
                modifier =
                    Modifier.testTag("takePhotoOption").clickable {
...
