...
  fun setName(name: String) {
    association = association.copy(name = name.trim())
    _uiState.value = _uiState.value.copy(name = name)
    if (assoAPI.associationNameValid(name)) {
      _uiState.value = _uiState.value.copy(nameError = null)
    } else {
      val error = if (name.isBlank()) "Name is required" else "Name is invalid or already used"
      _uiState.value = _uiState.value.copy(nameError = error)
    }
    updateSavable()
  }

  /*
...
